--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -79,7 +79,7 @@
   .sidebar {
     position: fixed;
     z-index: 10;
-    background-color: rgb(216, 200, 213);
+    background-color: var(--my-pinkish);
     width: 55%;
     padding-right: 1rem;
     height: 100%;
@@ -90,6 +90,13 @@
   .logo {
     display: flex;
   }
+  .logo > .icon {
+    color: var(--my-white);
+  }
+  .logo > .text {
+    color: var(--my-white);
+  }
+
   .sidebar_mobile_icon {
     z-index: 11;
     position: fixed;
@@ -101,7 +108,8 @@
     top: 2rem;
     right: 2rem;
     font-size: 3rem;
-    background-color: rgb(216, 200, 213);
+    background-color: var(--my-pinkish);
+    color: var(--my-white);
     padding: 1rem;
     border-radius: 50%;
   }
