--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,46 +1,57 @@
-.table_container {
-  overflow-x: hidden;
+/* .table_container {
   border-radius: 1rem;
-  box-shadow: 0 1rem 2rem 0 var(--my-white);
-}
+  background-color: var(--my-green);
+  box-shadow: 0 1rem 2rem 0 var(--my-green);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+} */
 .table_container table {
+  border-radius: 1rem;
+  background-color: var(--my-green);
+  box-shadow: 0 1rem 2rem 0 var(--my-green);
+  overflow-x: auto;
+  white-space: nowrap;
   width: 100%;
   height: 100%;
   padding: 2rem;
   border-radius: 1rem;
   border-collapse: collapse;
-  background-color: var(--my-white);
 }
 .table_container table thead tr th {
   font-size: 1.6rem;
+  width: fit-content;
   padding: 1rem 1.5rem;
   column-gap: 0;
-  box-shadow: 0 1rem 2rem 0 var(--my-pinkish);
-  background-color: var(--my-pinkish);
   color: var(--my-light-dark);
   text-align: left;
 }
 .table_container table tbody tr td {
   font-size: 1.4rem;
   font-weight: 400;
+  width: fit-content;
   text-align: left;
   padding: 1rem 1.5rem;
-  color: var(--my-light-dark);
+  color: var(--my-white);
 }
-/* Responsive
+/* Responsive */
 @media only screen and (max-width: 1200px) {
-  .MuiPaper-root {
-    width: 170% !important;
+  .table_container table {
+    display: block;
   }
 }
 
 /* Responsive */
-/* @media only screen and (max-width: 768px) {
-  .MuiPaper-root {
-    position: relative;
-    width: 100% !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@media only screen and (max-width: 768px) {
+  .table_container table {
+    width: 100%;
   }
-} */
+}
+/* Responsive */
+@media only screen and (max-width: 572px) {
+  .table_container table {
+    width: 90vw;
+    margin-left: 1rem;
+  }
+}
